--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,8 @@
 	<dependencies>
 	<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
 <dependency>
-    <groupId>com.mysql</groupId>
-    <artifactId>mysql-connector-j</artifactId>
-    <version>9.5.0</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
 </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
